objects/FLODocs__Jira_Strongpoint_Credential__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store user and pass of Jira Account for Customers. Protected Custom Setting</description>
    <fields>
        <fullName>FLODocs__Jira_Account_Name__c</fullName>
        <description>This will be the account associated to Customer Jira URL (example of this URL: https://strongpointflo.atlassian.net/browse/JIS-172 the account will be strongpointflo)</description>
        <inlineHelpText>This will be the account associated to Customer Jira URL (example of this URL: https://strongpointflo.atlassian.net/browse/JIS-172 the account will be strongpointflo)</inlineHelpText>
        <label>Jira Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Password__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Site_URL_Strongpoint_Page__c</fullName>
        <description>Site URL with the root the Strongpoint Visualforce Page : StrongpointJiraConnect</description>
        <inlineHelpText>Site URL with the root the Strongpoint Visualforce Page : StrongpointJiraConnect</inlineHelpText>
        <label>Site URL Strongpoint Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Jira Strongpoint Credentials</label>
</CustomObject>